fixed alignment of header

--- a/01UOA_INST-UOA_NDE/assets/css/custom.css
+++ b/01UOA_INST-UOA_NDE/assets/css/custom.css
@@ -8,9 +8,18 @@ nde-logo {
 [data-qa="link-to-newspaper-search"] {
   display: none;
 }
-.ual-top-banner {background-color:#275D38; height:70px; padding:15px 0 15px 30px; width: 100%;}
+
+@media (min-width: 1280px) {
+    .container .top-bar div{
+        width: clamp(1088px, 85%, 1368px);
+    }
+}
+
+.container .top-bar div {
+    margin: 0 auto;
+}
+.ual-top-banner {background-color:#275D38; height:70px; width: 100%; padding:15px 8px;}
 .ual-top-banner img {float:left; height:40px;}
-.ual-inner {margin:auto; max-width:1240px;}
 .ual-library-tag {float:left; color:#F2CD00; font-size:1.8rem; text-decoration: none; margin:7px 0 0 35px; font-weight: 200;}
 
 .main-landing-page .about .about-content .about-text {
